go/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    CAP
    CASE
    COMMENT
    CONST
    ELSE
    FALSE
    FUNC
    INTERFACE
    JOIN
    MAIN
    MAP
    MOD
    MULTI_COMMENT
    PACKAGE
    POINTER
    SCAN
    SWITCH
    TRUE

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> impresion
Rule 2     codigo -> expression
Rule 3     codigo -> cicloFor
Rule 4     codigo -> comparison
Rule 5     codigo -> logic_operation
Rule 6     codigo -> decVar
Rule 7     codigo -> funciones
Rule 8     codigo -> agrupaciones
Rule 9     codigo -> SenIF
Rule 10    codigo -> SenStruct
Rule 11    cicloFor -> FOR LLLAVE codigo RLLAVE
Rule 12    cicloFor -> FOR comparison LLLAVE codigo RLLAVE
Rule 13    cicloFor -> FOR logic_operation LLLAVE codigo RLLAVE
Rule 14    cicloFor -> FOR decVarOne COLON comparison COLON incre LLLAVE codigo RLLAVE
Rule 15    incre -> ID INCREASE
Rule 16    incre -> ID DECREASE
Rule 17    decVar -> decVarOne
Rule 18    decVar -> VAR ID EQUAL INTEGER
Rule 19    decVar -> VAR ID EQUAL ID
Rule 20    decVar -> VAR ID EQUAL FLOAT
Rule 21    decVar -> VAR ID EQUAL expression
Rule 22    decVar -> sliceC
Rule 23    decVar -> VAR ID EQUAL STRING
Rule 24    decVar -> ID DEQUAL STRING
Rule 25    decVar -> ID DEQUAL FLOAT
Rule 26    sliceC -> VAR ID LCORCHE RCORCHE type
Rule 27    sliceC -> ID DEQUAL funM
Rule 28    sliceC -> ID DEQUAL LCORCHE RCORCHE type agrupaciones
Rule 29    funM -> MAKE LPAREN LCORCHE RCORCHE type COMA INTEGER RPAREN
Rule 30    funM -> MAKE LPAREN LCORCHE RCORCHE type COMA INTEGER COMA INTEGER RPAREN
Rule 31    type -> INT32
Rule 32    type -> INT64
Rule 33    type -> FLOAT32
Rule 34    type -> FLOAT64
Rule 35    type -> BYTE
Rule 36    type -> WINT
Rule 37    type -> WFLOAT
Rule 38    type -> WSTRING
Rule 39    agrupaciones -> LLLAVE INTEGER RLLAVE
Rule 40    agrupaciones -> LLLAVE INTEGER enteros RLLAVE
Rule 41    agrupaciones -> LLLAVE FLOAT RLLAVE
Rule 42    agrupaciones -> LLLAVE FLOAT flotantes RLLAVE
Rule 43    agrupaciones -> LLLAVE STRING RLLAVE
Rule 44    agrupaciones -> LLLAVE STRING palabras RLLAVE
Rule 45    enteros -> COMA INTEGER
Rule 46    enteros -> COMA INTEGER enteros
Rule 47    flotantes -> COMA FLOAT
Rule 48    flotantes -> COMA FLOAT flotantes
Rule 49    palabras -> COMA STRING
Rule 50    palabras -> COMA STRING palabras
Rule 51    funciones -> APPEND LPAREN ID COMA INTEGER RPAREN
Rule 52    funciones -> APPEND LPAREN ID COMA FLOAT RPAREN
Rule 53    funciones -> APPEND LPAREN ID COMA STRING RPAREN
Rule 54    funciones -> APPEND LPAREN ID COMA ID RPAREN
Rule 55    funciones -> LEN LPAREN ID RPAREN
Rule 56    funciones -> COPY LPAREN ID COMA ID RPAREN
Rule 57    decVarOne -> ID DEQUAL ID
Rule 58    decVarOne -> ID DEQUAL INTEGER
Rule 59    SenIF -> IF LPAREN comparison RPAREN LLLAVE codigo RLLAVE
Rule 60    SenStruct -> TYPE ID STRUCT LLLAVE declaration RLLAVE
Rule 61    declaration -> tipo variable
Rule 62    tipo -> INT32
Rule 63    tipo -> INT64
Rule 64    tipo -> FLOAT32
Rule 65    tipo -> FLOAT64
Rule 66    tipo -> WSTRING
Rule 67    tipo -> BOOL
Rule 68    variable -> ID
Rule 69    comparison -> value op value
Rule 70    value -> ID
Rule 71    value -> expression
Rule 72    op -> GREATER
Rule 73    op -> SMALLER
Rule 74    op -> GREATER_OR_EQUAL
Rule 75    op -> SMALLER_OR_EQUAL
Rule 76    op -> EQUAL_COMPARE
Rule 77    op -> NOT_EQUAL
Rule 78    logic_operation -> logic_value logic_op logic_value
Rule 79    logic_operation -> negation
Rule 80    logic_value -> negation
Rule 81    logic_value -> comparison
Rule 82    negation -> NOT comparison
Rule 83    negation -> NOT ID
Rule 84    logic_op -> AND
Rule 85    logic_op -> OR
Rule 86    impresion -> PRINT LPAREN expression RPAREN
Rule 87    expression -> expression PLUS term
Rule 88    expression -> expression MINUS term
Rule 89    expression -> term
Rule 90    term -> term TIMES factor
Rule 91    term -> term DIVIDE factor
Rule 92    term -> factor
Rule 93    factor -> INTEGER
Rule 94    factor -> ID
Rule 95    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 84
APPEND               : 51 52 53 54
ARRAY                : 
BOOL                 : 67
BYTE                 : 35
CAP                  : 
CASE                 : 
COLON                : 14 14
COMA                 : 29 30 30 45 46 47 48 49 50 51 52 53 54 56
COMMENT              : 
CONST                : 
COPY                 : 56
DECREASE             : 16
DEQUAL               : 24 25 27 28 57 58
DIVIDE               : 91
ELSE                 : 
EQUAL                : 18 19 20 21 23
EQUAL_COMPARE        : 76
FALSE                : 
FLOAT                : 20 25 41 42 47 48 52
FLOAT32              : 33 64
FLOAT64              : 34 65
FOR                  : 11 12 13 14
FUNC                 : 
GREATER              : 72
GREATER_OR_EQUAL     : 74
ID                   : 15 16 18 19 19 20 21 23 24 25 26 27 28 51 52 53 54 54 55 56 56 57 57 58 60 68 70 83 94
IF                   : 59
INCREASE             : 15
INT32                : 31 62
INT64                : 32 63
INTEGER              : 18 29 30 30 39 40 45 46 51 58 93
INTERFACE            : 
JOIN                 : 
LCORCHE              : 26 28 29 30
LEN                  : 55
LLLAVE               : 11 12 13 14 39 40 41 42 43 44 59 60
LPAREN               : 29 30 51 52 53 54 55 56 59 86 95
MAIN                 : 
MAKE                 : 29 30
MAP                  : 
MINUS                : 88
MOD                  : 
MULTI_COMMENT        : 
NOT                  : 82 83
NOT_EQUAL            : 77
OR                   : 85
PACKAGE              : 
PLUS                 : 87
POINTER              : 
PRINT                : 86
RCORCHE              : 26 28 29 30
RLLAVE               : 11 12 13 14 39 40 41 42 43 44 59 60
RPAREN               : 29 30 51 52 53 54 55 56 59 86 95
SCAN                 : 
SMALLER              : 73
SMALLER_OR_EQUAL     : 75
STRING               : 23 24 43 44 49 50 53
STRUCT               : 60
SWITCH               : 
TIMES                : 90
TRUE                 : 
TYPE                 : 60
VAR                  : 18 19 20 21 23 26
WFLOAT               : 37
WINT                 : 36
WSTRING              : 38 66
error                : 

Nonterminals, with rules where they appear

SenIF                : 9
SenStruct            : 10
agrupaciones         : 8 28
cicloFor             : 3
codigo               : 11 12 13 14 59 0
comparison           : 4 12 14 59 81 82
decVar               : 6
decVarOne            : 14 17
declaration          : 60
enteros              : 40 46
expression           : 2 21 71 86 87 88 95
factor               : 90 91 92
flotantes            : 42 48
funM                 : 27
funciones            : 7
impresion            : 1
incre                : 14
logic_op             : 78
logic_operation      : 5 13
logic_value          : 78 78
negation             : 79 80
op                   : 69
palabras             : 44 50
sliceC               : 22
term                 : 87 88 89 90 91
tipo                 : 61
type                 : 26 28 29 30
value                : 69 69
variable             : 61

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . impresion
    (2) codigo -> . expression
    (3) codigo -> . cicloFor
    (4) codigo -> . comparison
    (5) codigo -> . logic_operation
    (6) codigo -> . decVar
    (7) codigo -> . funciones
    (8) codigo -> . agrupaciones
    (9) codigo -> . SenIF
    (10) codigo -> . SenStruct
    (86) impresion -> . PRINT LPAREN expression RPAREN
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (11) cicloFor -> . FOR LLLAVE codigo RLLAVE
    (12) cicloFor -> . FOR comparison LLLAVE codigo RLLAVE
    (13) cicloFor -> . FOR logic_operation LLLAVE codigo RLLAVE
    (14) cicloFor -> . FOR decVarOne COLON comparison COLON incre LLLAVE codigo RLLAVE
    (69) comparison -> . value op value
    (78) logic_operation -> . logic_value logic_op logic_value
    (79) logic_operation -> . negation
    (17) decVar -> . decVarOne
    (18) decVar -> . VAR ID EQUAL INTEGER
    (19) decVar -> . VAR ID EQUAL ID
    (20) decVar -> . VAR ID EQUAL FLOAT
    (21) decVar -> . VAR ID EQUAL expression
    (22) decVar -> . sliceC
    (23) decVar -> . VAR ID EQUAL STRING
    (24) decVar -> . ID DEQUAL STRING
    (25) decVar -> . ID DEQUAL FLOAT
    (51) funciones -> . APPEND LPAREN ID COMA INTEGER RPAREN
    (52) funciones -> . APPEND LPAREN ID COMA FLOAT RPAREN
    (53) funciones -> . APPEND LPAREN ID COMA STRING RPAREN
    (54) funciones -> . APPEND LPAREN ID COMA ID RPAREN
    (55) funciones -> . LEN LPAREN ID RPAREN
    (56) funciones -> . COPY LPAREN ID COMA ID RPAREN
    (39) agrupaciones -> . LLLAVE INTEGER RLLAVE
    (40) agrupaciones -> . LLLAVE INTEGER enteros RLLAVE
    (41) agrupaciones -> . LLLAVE FLOAT RLLAVE
    (42) agrupaciones -> . LLLAVE FLOAT flotantes RLLAVE
    (43) agrupaciones -> . LLLAVE STRING RLLAVE
    (44) agrupaciones -> . LLLAVE STRING palabras RLLAVE
    (59) SenIF -> . IF LPAREN comparison RPAREN LLLAVE codigo RLLAVE
    (60) SenStruct -> . TYPE ID STRUCT LLLAVE declaration RLLAVE
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (70) value -> . ID
    (71) value -> . expression
    (80) logic_value -> . negation
    (81) logic_value -> . comparison
    (82) negation -> . NOT comparison
    (83) negation -> . NOT ID
    (57) decVarOne -> . ID DEQUAL ID
    (58) decVarOne -> . ID DEQUAL INTEGER
    (26) sliceC -> . VAR ID LCORCHE RCORCHE type
    (27) sliceC -> . ID DEQUAL funM
    (28) sliceC -> . ID DEQUAL LCORCHE RCORCHE type agrupaciones
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    PRINT           shift and go to state 12
    FOR             shift and go to state 15
    VAR             shift and go to state 21
    ID              shift and go to state 22
    APPEND          shift and go to state 25
    LEN             shift and go to state 26
    COPY            shift and go to state 27
    LLLAVE          shift and go to state 16
    IF              shift and go to state 28
    TYPE            shift and go to state 29
    NOT             shift and go to state 31
    INTEGER         shift and go to state 23
    LPAREN          shift and go to state 13

    codigo                         shift and go to state 1
    impresion                      shift and go to state 2
    expression                     shift and go to state 3
    cicloFor                       shift and go to state 4
    comparison                     shift and go to state 5
    logic_operation                shift and go to state 6
    decVar                         shift and go to state 7
    funciones                      shift and go to state 8
    agrupaciones                   shift and go to state 9
    SenIF                          shift and go to state 10
    SenStruct                      shift and go to state 11
    term                           shift and go to state 14
    decVarOne                      shift and go to state 17
    value                          shift and go to state 18
    logic_value                    shift and go to state 19
    negation                       shift and go to state 20
    sliceC                         shift and go to state 24
    factor                         shift and go to state 30

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> impresion .

    $end            reduce using rule 1 (codigo -> impresion .)
    RLLAVE          reduce using rule 1 (codigo -> impresion .)


state 3

    (2) codigo -> expression .
    (87) expression -> expression . PLUS term
    (88) expression -> expression . MINUS term
    (71) value -> expression .

    $end            reduce using rule 2 (codigo -> expression .)
    RLLAVE          reduce using rule 2 (codigo -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GREATER         reduce using rule 71 (value -> expression .)
    SMALLER         reduce using rule 71 (value -> expression .)
    GREATER_OR_EQUAL reduce using rule 71 (value -> expression .)
    SMALLER_OR_EQUAL reduce using rule 71 (value -> expression .)
    EQUAL_COMPARE   reduce using rule 71 (value -> expression .)
    NOT_EQUAL       reduce using rule 71 (value -> expression .)


state 4

    (3) codigo -> cicloFor .

    $end            reduce using rule 3 (codigo -> cicloFor .)
    RLLAVE          reduce using rule 3 (codigo -> cicloFor .)


state 5

    (4) codigo -> comparison .
    (81) logic_value -> comparison .

    $end            reduce using rule 4 (codigo -> comparison .)
    RLLAVE          reduce using rule 4 (codigo -> comparison .)
    AND             reduce using rule 81 (logic_value -> comparison .)
    OR              reduce using rule 81 (logic_value -> comparison .)


state 6

    (5) codigo -> logic_operation .

    $end            reduce using rule 5 (codigo -> logic_operation .)
    RLLAVE          reduce using rule 5 (codigo -> logic_operation .)


state 7

    (6) codigo -> decVar .

    $end            reduce using rule 6 (codigo -> decVar .)
    RLLAVE          reduce using rule 6 (codigo -> decVar .)


state 8

    (7) codigo -> funciones .

    $end            reduce using rule 7 (codigo -> funciones .)
    RLLAVE          reduce using rule 7 (codigo -> funciones .)


state 9

    (8) codigo -> agrupaciones .

    $end            reduce using rule 8 (codigo -> agrupaciones .)
    RLLAVE          reduce using rule 8 (codigo -> agrupaciones .)


state 10

    (9) codigo -> SenIF .

    $end            reduce using rule 9 (codigo -> SenIF .)
    RLLAVE          reduce using rule 9 (codigo -> SenIF .)


state 11

    (10) codigo -> SenStruct .

    $end            reduce using rule 10 (codigo -> SenStruct .)
    RLLAVE          reduce using rule 10 (codigo -> SenStruct .)


state 12

    (86) impresion -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 34


state 13

    (95) factor -> LPAREN . expression RPAREN
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    expression                     shift and go to state 35
    term                           shift and go to state 14
    factor                         shift and go to state 30

state 14

    (89) expression -> term .
    (90) term -> term . TIMES factor
    (91) term -> term . DIVIDE factor

    PLUS            reduce using rule 89 (expression -> term .)
    MINUS           reduce using rule 89 (expression -> term .)
    $end            reduce using rule 89 (expression -> term .)
    GREATER         reduce using rule 89 (expression -> term .)
    SMALLER         reduce using rule 89 (expression -> term .)
    GREATER_OR_EQUAL reduce using rule 89 (expression -> term .)
    SMALLER_OR_EQUAL reduce using rule 89 (expression -> term .)
    EQUAL_COMPARE   reduce using rule 89 (expression -> term .)
    NOT_EQUAL       reduce using rule 89 (expression -> term .)
    RPAREN          reduce using rule 89 (expression -> term .)
    RLLAVE          reduce using rule 89 (expression -> term .)
    AND             reduce using rule 89 (expression -> term .)
    OR              reduce using rule 89 (expression -> term .)
    LLLAVE          reduce using rule 89 (expression -> term .)
    COLON           reduce using rule 89 (expression -> term .)
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38


state 15

    (11) cicloFor -> FOR . LLLAVE codigo RLLAVE
    (12) cicloFor -> FOR . comparison LLLAVE codigo RLLAVE
    (13) cicloFor -> FOR . logic_operation LLLAVE codigo RLLAVE
    (14) cicloFor -> FOR . decVarOne COLON comparison COLON incre LLLAVE codigo RLLAVE
    (69) comparison -> . value op value
    (78) logic_operation -> . logic_value logic_op logic_value
    (79) logic_operation -> . negation
    (57) decVarOne -> . ID DEQUAL ID
    (58) decVarOne -> . ID DEQUAL INTEGER
    (70) value -> . ID
    (71) value -> . expression
    (80) logic_value -> . negation
    (81) logic_value -> . comparison
    (82) negation -> . NOT comparison
    (83) negation -> . NOT ID
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    LLLAVE          shift and go to state 39
    ID              shift and go to state 43
    NOT             shift and go to state 31
    INTEGER         shift and go to state 23
    LPAREN          shift and go to state 13

    comparison                     shift and go to state 40
    logic_operation                shift and go to state 41
    decVarOne                      shift and go to state 42
    value                          shift and go to state 18
    logic_value                    shift and go to state 19
    negation                       shift and go to state 20
    expression                     shift and go to state 44
    term                           shift and go to state 14
    factor                         shift and go to state 30

state 16

    (39) agrupaciones -> LLLAVE . INTEGER RLLAVE
    (40) agrupaciones -> LLLAVE . INTEGER enteros RLLAVE
    (41) agrupaciones -> LLLAVE . FLOAT RLLAVE
    (42) agrupaciones -> LLLAVE . FLOAT flotantes RLLAVE
    (43) agrupaciones -> LLLAVE . STRING RLLAVE
    (44) agrupaciones -> LLLAVE . STRING palabras RLLAVE

    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    STRING          shift and go to state 47


state 17

    (17) decVar -> decVarOne .

    $end            reduce using rule 17 (decVar -> decVarOne .)
    RLLAVE          reduce using rule 17 (decVar -> decVarOne .)


state 18

    (69) comparison -> value . op value
    (72) op -> . GREATER
    (73) op -> . SMALLER
    (74) op -> . GREATER_OR_EQUAL
    (75) op -> . SMALLER_OR_EQUAL
    (76) op -> . EQUAL_COMPARE
    (77) op -> . NOT_EQUAL

    GREATER         shift and go to state 49
    SMALLER         shift and go to state 50
    GREATER_OR_EQUAL shift and go to state 51
    SMALLER_OR_EQUAL shift and go to state 52
    EQUAL_COMPARE   shift and go to state 53
    NOT_EQUAL       shift and go to state 54

    op                             shift and go to state 48

state 19

    (78) logic_operation -> logic_value . logic_op logic_value
    (84) logic_op -> . AND
    (85) logic_op -> . OR

    AND             shift and go to state 56
    OR              shift and go to state 57

    logic_op                       shift and go to state 55

state 20

    (79) logic_operation -> negation .
    (80) logic_value -> negation .

    $end            reduce using rule 79 (logic_operation -> negation .)
    LLLAVE          reduce using rule 79 (logic_operation -> negation .)
    RLLAVE          reduce using rule 79 (logic_operation -> negation .)
    AND             reduce using rule 80 (logic_value -> negation .)
    OR              reduce using rule 80 (logic_value -> negation .)


state 21

    (18) decVar -> VAR . ID EQUAL INTEGER
    (19) decVar -> VAR . ID EQUAL ID
    (20) decVar -> VAR . ID EQUAL FLOAT
    (21) decVar -> VAR . ID EQUAL expression
    (23) decVar -> VAR . ID EQUAL STRING
    (26) sliceC -> VAR . ID LCORCHE RCORCHE type

    ID              shift and go to state 58


state 22

    (24) decVar -> ID . DEQUAL STRING
    (25) decVar -> ID . DEQUAL FLOAT
    (70) value -> ID .
    (57) decVarOne -> ID . DEQUAL ID
    (58) decVarOne -> ID . DEQUAL INTEGER
    (27) sliceC -> ID . DEQUAL funM
    (28) sliceC -> ID . DEQUAL LCORCHE RCORCHE type agrupaciones
    (94) factor -> ID .

  ! reduce/reduce conflict for GREATER resolved using rule 70 (value -> ID .)
  ! reduce/reduce conflict for SMALLER resolved using rule 70 (value -> ID .)
  ! reduce/reduce conflict for GREATER_OR_EQUAL resolved using rule 70 (value -> ID .)
  ! reduce/reduce conflict for SMALLER_OR_EQUAL resolved using rule 70 (value -> ID .)
  ! reduce/reduce conflict for EQUAL_COMPARE resolved using rule 70 (value -> ID .)
  ! reduce/reduce conflict for NOT_EQUAL resolved using rule 70 (value -> ID .)
    DEQUAL          shift and go to state 59
    GREATER         reduce using rule 70 (value -> ID .)
    SMALLER         reduce using rule 70 (value -> ID .)
    GREATER_OR_EQUAL reduce using rule 70 (value -> ID .)
    SMALLER_OR_EQUAL reduce using rule 70 (value -> ID .)
    EQUAL_COMPARE   reduce using rule 70 (value -> ID .)
    NOT_EQUAL       reduce using rule 70 (value -> ID .)
    TIMES           reduce using rule 94 (factor -> ID .)
    DIVIDE          reduce using rule 94 (factor -> ID .)
    PLUS            reduce using rule 94 (factor -> ID .)
    MINUS           reduce using rule 94 (factor -> ID .)
    $end            reduce using rule 94 (factor -> ID .)
    RLLAVE          reduce using rule 94 (factor -> ID .)

  ! GREATER         [ reduce using rule 94 (factor -> ID .) ]
  ! SMALLER         [ reduce using rule 94 (factor -> ID .) ]
  ! GREATER_OR_EQUAL [ reduce using rule 94 (factor -> ID .) ]
  ! SMALLER_OR_EQUAL [ reduce using rule 94 (factor -> ID .) ]
  ! EQUAL_COMPARE   [ reduce using rule 94 (factor -> ID .) ]
  ! NOT_EQUAL       [ reduce using rule 94 (factor -> ID .) ]


state 23

    (93) factor -> INTEGER .

    TIMES           reduce using rule 93 (factor -> INTEGER .)
    DIVIDE          reduce using rule 93 (factor -> INTEGER .)
    PLUS            reduce using rule 93 (factor -> INTEGER .)
    MINUS           reduce using rule 93 (factor -> INTEGER .)
    $end            reduce using rule 93 (factor -> INTEGER .)
    GREATER         reduce using rule 93 (factor -> INTEGER .)
    SMALLER         reduce using rule 93 (factor -> INTEGER .)
    GREATER_OR_EQUAL reduce using rule 93 (factor -> INTEGER .)
    SMALLER_OR_EQUAL reduce using rule 93 (factor -> INTEGER .)
    EQUAL_COMPARE   reduce using rule 93 (factor -> INTEGER .)
    NOT_EQUAL       reduce using rule 93 (factor -> INTEGER .)
    RPAREN          reduce using rule 93 (factor -> INTEGER .)
    RLLAVE          reduce using rule 93 (factor -> INTEGER .)
    AND             reduce using rule 93 (factor -> INTEGER .)
    OR              reduce using rule 93 (factor -> INTEGER .)
    LLLAVE          reduce using rule 93 (factor -> INTEGER .)
    COLON           reduce using rule 93 (factor -> INTEGER .)


state 24

    (22) decVar -> sliceC .

    $end            reduce using rule 22 (decVar -> sliceC .)
    RLLAVE          reduce using rule 22 (decVar -> sliceC .)


state 25

    (51) funciones -> APPEND . LPAREN ID COMA INTEGER RPAREN
    (52) funciones -> APPEND . LPAREN ID COMA FLOAT RPAREN
    (53) funciones -> APPEND . LPAREN ID COMA STRING RPAREN
    (54) funciones -> APPEND . LPAREN ID COMA ID RPAREN

    LPAREN          shift and go to state 60


state 26

    (55) funciones -> LEN . LPAREN ID RPAREN

    LPAREN          shift and go to state 61


state 27

    (56) funciones -> COPY . LPAREN ID COMA ID RPAREN

    LPAREN          shift and go to state 62


state 28

    (59) SenIF -> IF . LPAREN comparison RPAREN LLLAVE codigo RLLAVE

    LPAREN          shift and go to state 63


state 29

    (60) SenStruct -> TYPE . ID STRUCT LLLAVE declaration RLLAVE

    ID              shift and go to state 64


state 30

    (92) term -> factor .

    TIMES           reduce using rule 92 (term -> factor .)
    DIVIDE          reduce using rule 92 (term -> factor .)
    PLUS            reduce using rule 92 (term -> factor .)
    MINUS           reduce using rule 92 (term -> factor .)
    $end            reduce using rule 92 (term -> factor .)
    GREATER         reduce using rule 92 (term -> factor .)
    SMALLER         reduce using rule 92 (term -> factor .)
    GREATER_OR_EQUAL reduce using rule 92 (term -> factor .)
    SMALLER_OR_EQUAL reduce using rule 92 (term -> factor .)
    EQUAL_COMPARE   reduce using rule 92 (term -> factor .)
    NOT_EQUAL       reduce using rule 92 (term -> factor .)
    RPAREN          reduce using rule 92 (term -> factor .)
    RLLAVE          reduce using rule 92 (term -> factor .)
    AND             reduce using rule 92 (term -> factor .)
    OR              reduce using rule 92 (term -> factor .)
    LLLAVE          reduce using rule 92 (term -> factor .)
    COLON           reduce using rule 92 (term -> factor .)


state 31

    (82) negation -> NOT . comparison
    (83) negation -> NOT . ID
    (69) comparison -> . value op value
    (70) value -> . ID
    (71) value -> . expression
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 66
    INTEGER         shift and go to state 23
    LPAREN          shift and go to state 13

    comparison                     shift and go to state 65
    value                          shift and go to state 18
    expression                     shift and go to state 44
    term                           shift and go to state 14
    factor                         shift and go to state 30

state 32

    (87) expression -> expression PLUS . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    term                           shift and go to state 67
    factor                         shift and go to state 30

state 33

    (88) expression -> expression MINUS . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    term                           shift and go to state 68
    factor                         shift and go to state 30

state 34

    (86) impresion -> PRINT LPAREN . expression RPAREN
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    expression                     shift and go to state 69
    term                           shift and go to state 14
    factor                         shift and go to state 30

state 35

    (95) factor -> LPAREN expression . RPAREN
    (87) expression -> expression . PLUS term
    (88) expression -> expression . MINUS term

    RPAREN          shift and go to state 70
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 36

    (94) factor -> ID .

    TIMES           reduce using rule 94 (factor -> ID .)
    DIVIDE          reduce using rule 94 (factor -> ID .)
    RPAREN          reduce using rule 94 (factor -> ID .)
    PLUS            reduce using rule 94 (factor -> ID .)
    MINUS           reduce using rule 94 (factor -> ID .)
    $end            reduce using rule 94 (factor -> ID .)
    GREATER         reduce using rule 94 (factor -> ID .)
    SMALLER         reduce using rule 94 (factor -> ID .)
    GREATER_OR_EQUAL reduce using rule 94 (factor -> ID .)
    SMALLER_OR_EQUAL reduce using rule 94 (factor -> ID .)
    EQUAL_COMPARE   reduce using rule 94 (factor -> ID .)
    NOT_EQUAL       reduce using rule 94 (factor -> ID .)
    RLLAVE          reduce using rule 94 (factor -> ID .)
    AND             reduce using rule 94 (factor -> ID .)
    OR              reduce using rule 94 (factor -> ID .)
    LLLAVE          reduce using rule 94 (factor -> ID .)
    COLON           reduce using rule 94 (factor -> ID .)


state 37

    (90) term -> term TIMES . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    factor                         shift and go to state 71

state 38

    (91) term -> term DIVIDE . factor
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 23
    ID              shift and go to state 36
    LPAREN          shift and go to state 13

    factor                         shift and go to state 72

state 39

    (11) cicloFor -> FOR LLLAVE . codigo RLLAVE
    (1) codigo -> . impresion
    (2) codigo -> . expression
    (3) codigo -> . cicloFor
    (4) codigo -> . comparison
    (5) codigo -> . logic_operation
    (6) codigo -> . decVar
    (7) codigo -> . funciones
    (8) codigo -> . agrupaciones
    (9) codigo -> . SenIF
    (10) codigo -> . SenStruct
    (86) impresion -> . PRINT LPAREN expression RPAREN
    (87) expression -> . expression PLUS term
    (88) expression -> . expression MINUS term
    (89) expression -> . term
    (11) cicloFor -> . FOR LLLAVE codigo RLLAVE
    (12) cicloFor -> . FOR comparison LLLAVE codigo RLLAVE
    (13) cicloFor -> . FOR logic_operation LLLAVE codigo RLLAVE
    (14) cicloFor -> . FOR decVarOne COLON comparison COLON incre LLLAVE codigo RLLAVE
    (69) comparison -> . value op value
    (78) logic_operation -> . logic_value logic_op logic_value
    (79) logic_operation -> . negation
    (17) decVar -> . decVarOne
    (18) decVar -> . VAR ID EQUAL INTEGER
    (19) decVar -> . VAR ID EQUAL ID
    (20) decVar -> . VAR ID EQUAL FLOAT
    (21) decVar -> . VAR ID EQUAL expression
    (22) decVar -> . sliceC
    (23) decVar -> . VAR ID EQUAL STRING
    (24) decVar -> . ID DEQUAL STRING
    (25) decVar -> . ID DEQUAL FLOAT
    (51) funciones -> . APPEND LPAREN ID COMA INTEGER RPAREN
    (52) funciones -> . APPEND LPAREN ID COMA FLOAT RPAREN
    (53) funciones -> . APPEND LPAREN ID COMA STRING RPAREN
    (54) funciones -> . APPEND LPAREN ID COMA ID RPAREN
    (55) funciones -> . LEN LPAREN ID RPAREN
    (56) funciones -> . COPY LPAREN ID COMA ID RPAREN
    (39) agrupaciones -> . LLLAVE INTEGER RLLAVE
    (40) agrupaciones -> . LLLAVE INTEGER enteros RLLAVE
    (41) agrupaciones -> . LLLAVE FLOAT RLLAVE
    (42) agrupaciones -> . LLLAVE FLOAT flotantes RLLAVE
    (43) agrupaciones -> . LLLAVE STRING RLLAVE
    (44) agrupaciones -> . LLLAVE STRING palabras RLLAVE
    (59) SenIF -> . IF LPAREN comparison RPAREN LLLAVE codigo RLLAVE
    (60) SenStruct -> . TYPE ID STRUCT LLLAVE declaration RLLAVE
    (90) term -> . term TIMES factor
    (91) term -> . term DIVIDE factor
    (92) term -> . factor
    (70) value -> . ID
    (71) value -> . expression
    (80) logic_value -> . negation
    (81) logic_value -> . comparison
    (82) negation -> . NOT comparison
    (83) negation -> . NOT ID
    (57) decVarOne -> . ID DEQUAL ID
    (58) decVarOne -> . ID DEQUAL INTEGER
    (26) sliceC -> . VAR ID LCORCHE RCORCHE type
    (27) sliceC -> . ID DEQUAL funM
    (28) sliceC -> . ID DEQUAL LCORCHE RCORCHE type agrupaciones
    (93) factor -> . INTEGER
    (94) factor -> . ID
    (95) factor -> . LPAREN expression RPAREN

    PRINT           shift and go to state 12
    FOR             shift and go to state 15
    VAR             shift and go to state 21
    ID              shift and go to state 22
    APPEND          shift and go to state 25
    LEN             shift and go to state 26
    COPY            shift and go to state 27
    LLLAVE          shift and go to state 16
    IF              shift and go to state 28
    TYPE            shift and go to state 29
    NOT             shift and go to state 31
    INTEGER         shift and go to state 23
    LPAREN          shift and go to state 13

    codigo                         shift and go to state 73
    impresion                      shift and go to state 2
    expression                     shift and go to state 3
